--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "firebase": "^6.6.2",
-    "firex-store": "^0.3.1",
+    "firex-store": "^1.0.0-alpha1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "vue-router": "^3.1.3"
